--- a/styles.css
+++ b/styles.css
@@ -57,14 +57,14 @@ body {
 }
 
 .logo {
-  width: clamp(150px, 12vw, 250px);
+  width: clamp(150px, 14vw, 400px);
   height: auto;
 }
 
 .topbar {
   position: absolute;
   width: 100%;
-  height: 10vh;
+  height: 12vh;
   background-color: rgba(0, 0, 0, 0.6);
   backdrop-filter: blur(15px);
   display: flex;
@@ -433,7 +433,7 @@ body {
   align-items: center;
   padding-top: 40px;
   border-top: 1px solid #d4d0c8;
-  color: #666;
+  color: #b2b2b2;
 }
 
 .lp-logo {
@@ -462,5 +462,4 @@ body {
   .footer-locations {
     justify-content: flex-start;
   }
-
 }
