--- a/styles.css
+++ b/styles.css
@@ -452,6 +452,21 @@ body {
     max-width: 150px;
   }
 
+  .logo {
+      width: clamp(250px, 14vw, 370px);
+      height: auto;
+  }
+
+  .box-subtitle {
+    font-size: clamp(1.05rem, 2vw, 1.6rem);
+    margin-bottom: 20px;
+  }
+
+  .box-button {
+    font-size: clamp(0.9rem, 2vw, 1.6rem);
+    padding: 20px 0;
+  }
+
   .box {
     position: relative;
     border: 1px solid white;
